--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -1,41 +1,149 @@
+body {
+  font-family: 'Arimo', Arial, sans-serif;
+  font-size: 16px;
+  letter-spacing: 0.03rem;
+  line-height: 150%;
+  margin: 0;
+  padding: 0;
+}
+
+h1 {
+  font-size: 3rem;
+  line-height: 120%;
+}
+
+h2 {
+  font-size: 2rem;
+  line-height: 130%;
+}
+
+h3 {
+  font-size: 1.5rem;
+  line-height: 140%;
+}
+
 a {
   text-decoration: none;
+  color: inherit;
 }
 
-h1  {
-  font-family: Staatliches;
-  font-size: 120px;
+/******
+Buttons
+*******/
+
+.btn {
+  font-size: 1.1rem;
+  padding: 15px 25px;
+  background: #006030;
+  color: white;
+  border-radius: 3px;
+  box-shadow: 0px 1px 5px #00000099;
+  transition: 0.4s ease;
 }
 
-#category {
-   font-family: Staatliches;
-   font-weight: 500;
+.btn:not(:last-child) {
+  margin-right: 20px;
 }
 
-#title {
-  letter-spacing: .4px;
-  font-size: 22px;
-  font-size: 1.375rem;
-  line-height: 1.13636;
+.btn:hover {
+  background: #003060 ;
 }
 
-#banner {
-  margin: 20px;
-  height: 800px;
+/********
+Structure
+*********/
+
+.container {
+  max-width: 1200px;
+  margin: 0 auto;
 }
 
-#editor {
-  font-size: 16px;
-  font-size: 1rem;
-  line-height: 1.75;
+/*****
+Header
+******/
+
+header {
+  padding: 10px;
+  background: #fafafa;
 }
 
-.uk-navbar-container {
-  background: #fff !important;
-  font-family: Staatliches;
+header .container {
+  display: flex;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  align-items: center;
 }
 
-img:hover {
-  opacity: 1;
-  transition: opacity 0.25s cubic-bezier(0.39, 0.575, 0.565, 1);
+header nav ul {
+  display: flex;
+}
+
+header nav li {
+  display: flex;
+  font-weight: bold;
+  font-size: 1.1rem;
+  transition: 0.3s ease;
+}
+
+header nav li:not(:last-child) {
+  margin-right: 30px;
+}
+
+header nav li:hover {
+  color: #aaa;
+}
+
+/*****
+Banner
+******/
+
+.banner {
+  background-size: cover;
+  background-position: center;
+  color: white;
+}
+
+.banner .overlay {
+  background: linear-gradient(#00000000, #000000AA);
+  padding: 30rem 0px 5rem 0;
+}
+
+.banner h1 {
+  max-width: 800px;
+  border-top: 5px solid #fff;
+  padding-top: 10px;
+}
+
+/*****
+Text Box
+******/
+
+.text-box {
+  padding: 5rem 1rem;
+}
+
+.text-box .container {
+  max-width: 900px;
+}
+
+.text-box .right, .text-box .left {
+  display: grid;
+  grid-template: auto / repeat(2, auto);
+  grid-gap: 50px;
+  place-content: center;
+  place-items: center;
+}
+
+.text-box .left .text {
+  margin-right: -5rem;
+  background: white;
+  padding: 2rem 3rem;
+  z-index: 2000;
+}
+
+.text-box .right .text {
+  margin-left: -5rem;
+  background: white;
+  padding: 2rem 3rem;
+  z-index: 2000;
 }
