--- a/frontend/assets/css/main.css
+++ b/frontend/assets/css/main.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-family: 'Bitter', Georgia, serif;
-  font-size: 3rem;
+  font-size: 2.8rem;
   line-height: 120%;
 }
 
@@ -20,6 +20,7 @@ h2 {
 }
 
 h3 {
+  font-family: 'Bitter', Georgia, serif;
   font-size: 1.5rem;
   line-height: 140%;
 }
@@ -39,14 +40,20 @@ a {
 Buttons
 *******/
 
+button {
+  padding: 0;
+  cursor: pointer;
+}
+
 .btn {
   font-size: 1.1rem;
-  padding: 20px 30px;
+  padding: 15px 30px;
   background: #008040;
   color: white;
   border-radius: 3px;
   box-shadow: 0px 1px 5px #00000099;
   transition: 0.4s ease;
+  border: none;
 }
 
 .btn:not(:last-child) {
@@ -68,6 +75,7 @@ Structure
 .container {
   max-width: 1200px;
   margin: 0 auto;
+  padding: 1.5rem;
 }
 
 /*****
@@ -75,7 +83,6 @@ Header
 ******/
 
 header {
-  padding: 10px;
   background: #fff;
 }
 
@@ -111,13 +118,13 @@ Banner
 
 .banner {
   background-size: cover;
-  background-position: center;
+  background-position: 30% 50%;
   color: white;
 }
 
 .banner .overlay {
   background: linear-gradient(#00000000, #000000AA);
-  padding: 30rem 2rem 5rem 2rem;
+  padding: 25% 0 5rem 0;
 }
 
 .banner h1 {
@@ -159,16 +166,11 @@ Text Box
   width: 100%;
 }
 
-.text-box .right, .text-box .left {
-  display: grid;
-  grid-template: auto / repeat(2, 1fr);
-  place-content: center;
-  place-items: center;
-}
+
 
 .text-box .text {
   max-width: 600px;
-  padding: 10rem 2rem;
+  padding: 15% 2rem;
 }
 
 
@@ -178,9 +180,20 @@ Grid
 
 .grid {
   display: grid;
-  grid-template: auto / repeat(3, auto);
   place-items: center;
   place-content: center;
+}
+
+.g-2 {
+  grid-template: auto / repeat(2, 1fr);
+}
+
+.g-3 {
+  grid-template: auto / repeat(3, 1fr);
+}
+
+.grid img {
+  margin-top: 2rem;
 }
 
 .grid-item {
@@ -195,7 +208,7 @@ Grid
 }
 
 .grid-text {
-  padding: 5rem;
+  padding: 10%;
 }
 
 .grid h2 {
@@ -215,11 +228,11 @@ CTA
 
 .cta .overlay {
   background: linear-gradient(#00000000, #000000AA);
-  padding: 10rem 0;
+  padding: 10% 0;
 }
 
-.cta h2 {
-  max-width: 700px;
+.cta h3 {
+  max-width: 600px;
   border-top: 5px solid #fff;
   padding-top: 10px;
   margin-bottom: 3rem;
@@ -263,25 +276,34 @@ Contact Page
 ***********/
 
 .contact {
-  text-align: center;
-  padding: 4rem 1rem;
-  max-width: 500px;
-  margin: 0 auto;
+  padding: 2% 0;
+}
+
+.contact .form {
+  background: #efefef;
+  border-radius: 5px;
+  padding: 3rem;
+}
+
+form label {
+  display: block;
+  margin-bottom: 0.15rem;
 }
 
 form input, form textarea {
+  font-family: 'Arimo', sans-serif;
+  font-size: 1rem;
   width: 250px;
   border-radius: 5px;
   border: 1px solid #aaa;
   padding: 10px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
   background-color: #fafafa;
 }
 
-form a.btn {
+form .btn {
   display: block;
-  padding: 10px 10px;
-  width: 250px !important;
+  width: 100% !important;
   margin: 0 auto;
 }
 
@@ -329,4 +351,27 @@ footer nav li:hover {
 footer h6 {
   color: white;
   font-weight: normal;
+}
+
+@media all and (max-width: 1000px) {
+  body {
+    font-size: 16px;
+  }
+  .grid {
+    display: block;
+  }
+
+  .image {
+    display: block;
+    padding: 15rem 0;
+  }
+
+  .btn {
+    display: block;
+  }
+
+  .btn:not(:last-child) {
+    margin-bottom: 2rem;
+    margin-right: 0;
+  }
 }
